Scrolling out of bounds - FIX

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    height: 100%;
+}
 
 body {
     margin: 0;
@@ -16,6 +19,5 @@ body {
         "footer footer footer";
 
     grid-template-rows: auto auto 1fr auto;
-    
-    height: 100vh;
+
 }
